gl33-master/src/test/deca/syntax/invalid/others/doubleQuotesNonFermes.deca
/*
Test sur les doubles quotes non fermés

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
    print("hello);  
}
